# vs1

./: PLAN.md  README.md  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  system_audio.rs
src/lib/audio/: adapters.ts  microphone-adapter.ts  mock-engine.ts  system-adapter.ts  types.ts
src/lib/scene/: Particle.svelte  VisualizerScene.svelte
src/lib/stores/: audio.ts
src/lib/ui/: ControlPanel.svelte
